terraform/modules/vpc/main.tf
resource "aws_vpc" "this" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(var.tags, { Name = var.name })
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags, { Name = var.name })
}

resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.this.id
  cidr_block        = cidrsubnet(var.cidr_block, 4, 0)
  availability_zone = var.availability_zones[0]

  tags = merge(var.tags, { Name = "${var.name}-public" })
}

resource "aws_subnet" "private" {
  count = var.primary_private_subnets_enabled ? length(var.availability_zones) : 0

  vpc_id            = aws_vpc.this.id
  cidr_block        = cidrsubnet(var.cidr_block, 4, count.index + 1)
  availability_zone = var.availability_zones[count.index]

  tags = merge(var.tags, { Name = "${var.name}-private-${var.availability_zones[count.index]}" })
}

resource "aws_vpc_ipv4_cidr_block_association" "secondary" {
  count = var.secondary_cidr_block == null ? 0 : 1

  vpc_id     = aws_vpc.this.id
  cidr_block = var.secondary_cidr_block
}

resource "aws_subnet" "private_secondary" {
  count = var.secondary_cidr_block == null ? 0 : length(var.availability_zones)

  vpc_id            = aws_vpc.this.id
  cidr_block        = cidrsubnet(var.secondary_cidr_block, 4, count.index + 1)
  availability_zone = var.availability_zones[count.index]

  tags = merge(var.tags, { Name = "${var.name}-private-secondary-${var.availability_zones[count.index]}" })

  depends_on = [aws_vpc_ipv4_cidr_block_association.secondary]
}

resource "aws_nat_gateway" "this" {
  allocation_id = var.eip_allocation_id
  subnet_id     = aws_subnet.public.id

  tags = merge(var.tags, { Name = var.name })

  depends_on = [aws_internet_gateway.this]
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags, { Name = "${var.name}-public" })
}

resource "aws_route" "public_internet" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.this.id
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags, { Name = "${var.name}-private" })
}

resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.this.id
}

resource "aws_route_table_association" "private" {
  count = length(aws_subnet.private)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_secondary" {
  count = length(aws_subnet.private_secondary)

  subnet_id      = aws_subnet.private_secondary[count.index].id
  route_table_id = aws_route_table.private.id
}
